# HBP-HossyanBikeProject-

./: .gitignore  README.md  platformio.ini  policy.cpp  pyproject.toml
mjcf/: HBP_mjcf.xml  scene.xml
mjcf/HBP_V2_5_mjcf/: HBP_V2_5_mjcf.xml  scene.xml
mjcf/HBP_V3/: HBP_V3_mjcf.xml
mjcf/assets/: HBP_mjcf.xml
rl/: bike_V3_mjcf.xml  play_bike.py  train_bike.py
rl/assets/: bike_V3_mjcf.xml
rl/logs/bike/log1/: events.out.tfevents.1779092350.kohossyan.20728.0  events.out.tfevents.1779092499.kohossyan.11932.0  events.out.tfevents.1779092657.kohossyan.15180.0  events.out.tfevents.1779092951.kohossyan.6044.0  events.out.tfevents.1779092977.kohossyan.10048.0  model_0.pt  model_200.pt  model_400.pt  model_600.pt  model_800.pt  model_999.pt
rl/logs/bike/log1/git/: HBP-HossyanBikeProject-.diff
rl/logs/bike/log2/: events.out.tfevents.1779094149.kohossyan.21724.0  model_0.pt  model_200.pt  model_400.pt  model_499.pt
rl/logs/bike/log2/git/: HBP-HossyanBikeProject-.diff
rl/logs/bike/log3/: events.out.tfevents.1779095601.kohossyan.21800.0  events.out.tfevents.1779328439.kohossyan.22100.0  model_0.pt  model_1000.pt  model_1200.pt  model_1400.pt  model_1600.pt  model_1799.pt  model_200.pt  model_400.pt  model_600.pt  model_800.pt
rl/logs/bike/log3/git/: HBP-HossyanBikeProject-.diff
rl/logs/bike/log4/: events.out.tfevents.1779329016.kohossyan.17180.0  model_0.pt  model_1000.pt  model_1200.pt  model_1400.pt  model_1600.pt  model_1799.pt  model_200.pt  model_400.pt  model_600.pt  model_800.pt
rl/logs/bike/log4/git/: HBP-HossyanBikeProject-.diff
rl/logs/bike/log5/: events.out.tfevents.1779599966.kohossyan.9912.0  model_0.pt  model_1000.pt  model_1200.pt  model_1400.pt  model_1600.pt  model_1799.pt  model_200.pt  model_400.pt  model_600.pt  model_800.pt
rl/logs/bike/log5/git/: HBP-HossyanBikeProject-.diff
rl/logs/cartpole/test/: events.out.tfevents.1778733761.kohossyan.10520.0  model_0.pt  model_200.pt  model_400.pt  model_600.pt  model_800.pt  model_999.pt
rl/logs/cartpole/test/git/: HBP-HossyanBikeProject-.diff
rl/others_sampletest/: bike_env_cfg.py
rl/tasks/: __init__.py  export_model_to_header.py  play.py  train.py
rl/tasks/bike_balance/: __init__.py  env_cfg.py
rl/tasks/bike_balance/mdp/: __init__.py  actions.py  events.py  observations.py  rewards.py  terminations.py
src/: PID_gain_change.cpp  bike_pid.cpp  jump_motor_calc.py  m5stack _mac_address.cpp  main.cpp  parameters.h  pendulum_pid.cpp  pendulum_rl.cpp  rl_pid_test.cpp  rl_test.cpp
src/bike_control/: bike_cybergear.cpp  bike_pid.cpp  parameters.h  policy.cpp  policy.h  rl_sample.cpp
src/motor_test/: bike_cybergear.cpp  cybergear_PDgain_change.cpp  cybergear_data_csv.cpp  cybergear_identification.cpp  cybergear_matigai.cpp  cybergear_test.cpp  cybrgear_id_change.cpp  roller485_speed_test.cpp  test.cpp
tools/: HBP_scene.xml  bike.py  bike_V3_mjcf.xml  bike_env_cfg.py  cartpole_env_cfg.py  play.py  play_bike.py  play_cartpole.py  pyproject.toml  requirements.txt  train.py  train_bike.py  train_cartpole.py
