[project]
name = "my-project"
version = "0.1.0"
description = ""
requires-python = ">=3.11"
dependencies = [
    "absl-py==2.4.0",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "asttokens==3.0.1",
    "attrs==26.1.0",
    "bcrypt==5.0.0",
    "certifi==2026.4.22",
    "cffi==2.0.0",
    "charset-normalizer==3.4.7",
    "click==8.3.3",
    "cloudpickle==3.1.2",
    "colorama==0.4.6",
    "colorlog==6.10.1",
    "contourpy==1.3.3",
    "cryptography==48.0.0",
    "cycler==0.12.1",
    "decorator==5.2.1",
    "Deprecated==1.3.1",
    "docstring_parser==0.18.0",
    "embreex==4.4.0",
    "etils==1.14.0",
    "executing==2.2.1",
    "fabric==3.2.3",
    "filelock==3.29.0",
    "fonttools==4.62.1",
    "fsspec==2026.4.0",
    "gitdb==4.0.12",
    "GitPython==3.1.50",
    "glfw==2.10.0",
    "grpcio==1.80.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.13",
    "ImageIO==2.37.3",
    "imageio-ffmpeg==0.6.0",
    "importlib_metadata==9.0.0",
    "invoke==2.2.1",
    "ipython==9.13.0",
    "ipython_pygments_lexers==1.1.1",
    "jedi==0.20.0",
    "Jinja2==3.1.6",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "kiwisolver==1.5.0",
    "lxml==6.1.0",
    "manifold3d==3.4.1",
    "mapbox_earcut==2.0.0",
    "Markdown==3.10.2",
    "markdown-it-py==4.1.0",
    "MarkupSafe==3.0.3",
    "matplotlib==3.10.9",
    "matplotlib-inline==0.2.1",
    "mdurl==0.1.2",
    "mediapy==1.2.6",
    "mjlab==1.3.0",
    "mjviser==0.0.14",
    "ml_dtypes==0.5.4",
    "mpmath==1.3.0",
    "msgspec==0.21.1",
    "mujoco==3.8.0",
    "mujoco-warp==3.8.0.2",
    "networkx==3.6.1",
    "numpy==2.4.4",
    "onnx==1.21.0",
    "onnx-ir==0.2.1",
    "onnxscript==0.7.0",
    "packaging==26.2",
    "paramiko==4.0.0",
    "parso==0.8.7",
    "pillow==12.2.0",
    "platformdirs==4.9.6",
    "prettytable==3.17.0",
    "prompt_toolkit==3.0.52",
    "protobuf==7.34.1",
    "psutil==7.2.2",
    "pure_eval==0.2.3",
    "pycollada==0.9.3",
    "pycparser==3.0",
    "pydantic==2.13.4",
    "pydantic_core==2.46.4",
    "Pygments==2.20.0",
    "PyNaCl==1.6.2",
    "PyOpenGL==3.1.10",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "pyvers==0.2.2",
    "PyYAML==6.0.3",
    "referencing==0.37.0",
    "requests==2.33.1",
    "rich==14.3.4",
    "rpds-py==0.30.0",
    "rsl-rl-lib==5.0.1",
    "rtree==1.4.1",
    "scipy==1.17.1",
    "sentry-sdk==2.59.0",
    "setuptools==81.0.0",
    "shapely==2.1.2",
    "six==1.17.0",
    "smmap==5.0.3",
    "stack-data==0.6.3",
    "svg.path==7.0",
    "sympy==1.14.0",
    "tensorboard==2.20.0",
    "tensorboard-data-server==0.7.2",
    "tensordict==0.12.2",
    "tqdm==4.67.3",
    "traitlets==5.15.0",
    "trimesh==4.12.2",
    "typeguard==4.5.1",
    "typing-inspection==0.4.2",
    "typing_extensions==4.15.0",
    "tyro==1.0.13",
    "urllib3==2.6.3",
    "vhacdx==0.0.10",
    "viser==1.0.27",
    "wandb==0.26.1",
    "warp-lang==1.12.0",
    "wcwidth==0.7.0",
    "websockets==16.0",
    "Werkzeug==3.1.8",
    "wrapt==2.1.2",
    "xxhash==3.7.0",
    "yourdfpy==0.0.60",
    "zipp==3.23.1",
    "zstandard==0.25.0",
]

# PyTorchのCUDA版はPyPI以外から取得するため、tool.uv.sourcesで別途指定
[tool.uv]
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]
torchaudio = [{ index = "pytorch-cu128" }]
