[project]
name = "tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch==2.7.0",
    "torchvision==0.22.0",
    "torchaudio==2.11.0",
    "numpy==2.4.4",
    "scipy==1.17.1",
    "matplotlib==3.10.9",
    "mujoco==3.8.0",
    "wandb==0.26.1",
    "tensorboard==2.20.0",
    "pydantic==2.13.4",
    "requests==2.33.1",
    "rich==14.3.4",
    "tqdm==4.67.3",
    "PyYAML==6.0.3",
    "pillow==12.2.0",
    "httpx==0.28.1",
    "ipython==9.13.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true